<resources>
    <string name="app_name">Calculator</string>
    <string name="default_input">0</string>
    <string name="clear">C</string>
    <string name="percent">%</string>
    <string name="delete">←</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="mul">x</string>
    <string name="div">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="dot">.</string>
    <string name="zero_dot">0.</string>
    <string name="zero">0</string>
    <string name="empty"></string>
    <string name="result">=</string>
    <string name="enter_input">Vui lòng nhập phép tính</string>
    <string name="div_zero">Phép chia không hợp lệ</string>
    <string name="out_of_value">Kết quả quá lớn, ngoài khả năng tính toán của máy</string>
</resources>
