<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:rowCount="5"
    android:columnCount="4"
    android:layout_margin="2dp"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/button_clear"
        android:text="@string/clear"
        style="@style/FunctionalButton"
        android:layout_margin="2dp"
        android:layout_marginBottom="2dp"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"/>
    <Button
        android:id="@+id/button_percent"
        android:text="@string/percent"
        style="@style/FunctionalButton"
        android:layout_margin="2dp"
        android:layout_marginBottom="2dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_column="1"
        android:layout_row="0"/>
    <Button
        android:id="@+id/button_delete"
        android:text="@string/delete"
        android:textSize="40sp"
        android:textStyle="bold"
        style="@style/FunctionalButton"
        android:layout_margin="2dp"
        android:layout_column="2"
        android:layout_row="0"
        android:layout_columnWeight="1"
        android:layout_marginBottom="2dp"
        android:layout_rowWeight="1"/>
    <Button
        android:id="@+id/button_add"
        android:text="@string/add"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_marginBottom="2dp"
        style="@style/FunctionalButton"
        android:layout_margin="2dp"
        android:layout_column="3"
        android:layout_row="0"/>
    <Button
        android:id="@+id/button_sub"
        android:text="@string/sub"
        android:layout_columnWeight="1"
        android:layout_marginBottom="2dp"
        android:layout_rowWeight="1"
        style="@style/FunctionalButton"
        android:layout_margin="2dp"
        android:layout_column="3"
        android:layout_row="1"/>
    <Button
        android:id="@+id/button_mul"
        android:text="@string/mul"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="2dp"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        style="@style/FunctionalButton"
        android:layout_margin="2dp"
        android:layout_column="3"
        android:layout_row="2"/>
    <Button
        android:id="@+id/button_div"
        android:text="@string/div"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        style="@style/FunctionalButton"
        android:layout_margin="2dp"
        android:layout_marginBottom="2dp"
        android:layout_column="3"
        android:layout_row="3"/>
    <Button
        android:id="@+id/button_seven"
        android:text="@string/seven"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        style="@style/NumberButton"
        android:layout_margin="2dp"
        android:layout_marginBottom="2dp"
        android:layout_column="0"
        android:layout_row="1"/>
    <Button
        android:id="@+id/button_eight"
        android:text="@string/eight"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        style="@style/NumberButton"
        android:layout_marginBottom="2dp"
        android:layout_margin="2dp"
        android:layout_column="1"
        android:layout_row="1"/>
    <Button
        android:id="@+id/button_nine"
        android:text="@string/nine"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        style="@style/NumberButton"
        android:layout_marginBottom="2dp"
        android:layout_margin="2dp"
        android:layout_column="2"
        android:layout_row="1"/>
    <Button
        android:id="@+id/button_four"
        android:text="@string/four"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        style="@style/NumberButton"
        android:layout_marginBottom="2dp"
        android:layout_margin="2dp"
        android:layout_column="0"
        android:layout_row="2"/>
    <Button
        android:id="@+id/button_five"
        android:text="@string/five"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_marginBottom="2dp"
        style="@style/NumberButton"
        android:layout_margin="2dp"
        android:layout_column="1"
        android:layout_row="2"/>
    <Button
        android:id="@+id/button_six"
        android:text="@string/six"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_marginBottom="2dp"
        style="@style/NumberButton"
        android:layout_margin="2dp"
        android:layout_column="2"
        android:layout_row="2"/>
    <Button
        android:id="@+id/button_one"
        android:text="@string/one"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_marginBottom="2dp"
        style="@style/NumberButton"
        android:layout_margin="2dp"
        android:layout_column="0"
        android:layout_row="3"/>
    <Button
        android:id="@+id/button_two"
        android:text="@string/two"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        style="@style/NumberButton"
        android:layout_margin="2dp"
        android:layout_marginBottom="2dp"
        android:layout_column="1"
        android:layout_row="3"/>
    <Button
        android:id="@+id/button_three"
        android:text="@string/three"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        style="@style/NumberButton"
        android:layout_margin="2dp"
        android:layout_marginBottom="2dp"
        android:layout_column="2"
        android:layout_row="3"/>
    <Button
        android:id="@+id/button_dot"
        android:text="@string/dot"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        style="@style/NumberButton"
        android:layout_margin="2dp"
        android:layout_marginBottom="2dp"
        android:layout_column="0"
        android:layout_row="4" />
    <Button
        android:id="@+id/button_zero"
        android:text="@string/zero"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        style="@style/NumberButton"
        android:layout_margin="2dp"
        android:layout_marginBottom="2dp"
        android:layout_column="1"
        android:layout_row="4"/>
    <Button
        android:id="@+id/button_result"
        android:text="@string/result"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        style="@style/ResultButton"
        android:layout_marginBottom="2dp"
        android:layout_margin="2dp"
        android:layout_column="2"
        android:layout_row="4"/>
</GridLayout>
