<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        layout="@layout/screen"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/constraint_layout_margin_top"
        android:layout_marginBottom="@dimen/constraint_layout_margin_bottom"
        android:gravity="bottom">

        <Button
            android:id="@+id/button_clear"
            style="@style/FunctionalButton"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_margin="@dimen/button_margin_all"
            android:text="@string/clear"
            app:layout_constraintBottom_toTopOf="@+id/button_seven"
            app:layout_constraintEnd_toStartOf="@+id/button_percent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_percent"
            style="@style/FunctionalButton"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_margin="@dimen/button_margin_all"
            android:text="@string/percent"
            app:layout_constraintBottom_toTopOf="@+id/button_eight"
            app:layout_constraintEnd_toStartOf="@+id/button_delete"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/button_clear"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_delete"
            style="@style/FunctionalButton"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_margin="@dimen/button_margin_all"
            android:text="@string/delete"
            android:textSize="@dimen/text_button_delete"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button_nine"
            app:layout_constraintEnd_toStartOf="@+id/button_add"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintStart_toEndOf="@+id/button_percent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_add"
            style="@style/FunctionalButton"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_margin="@dimen/button_margin_all"
            android:text="@string/add"
            app:layout_constraintBottom_toTopOf="@+id/button_sub"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/button_delete"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_sub"
            style="@style/FunctionalButton"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_margin="@dimen/button_margin_all"
            android:text="@string/sub"
            app:layout_constraintBottom_toTopOf="@+id/button_mul"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/button_nine"
            app:layout_constraintTop_toBottomOf="@+id/button_add" />

        <Button
            android:id="@+id/button_mul"
            style="@style/FunctionalButton"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_margin="@dimen/button_margin_all"
            android:text="@string/mul"
            android:textSize="@dimen/button_mul_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button_div"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/button_six"
            app:layout_constraintTop_toBottomOf="@+id/button_sub" />

        <Button
            android:id="@+id/button_div"
            style="@style/FunctionalButton"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_margin="@dimen/button_margin_all"
            android:text="@string/div"
            app:layout_constraintBottom_toTopOf="@+id/button_result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/button_three"
            app:layout_constraintTop_toBottomOf="@+id/button_mul" />

        <Button
            android:id="@+id/button_seven"
            style="@style/NumberButton"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_margin="@dimen/button_margin_all"
            android:text="@string/seven"
            app:layout_constraintBottom_toTopOf="@+id/button_four"
            app:layout_constraintEnd_toStartOf="@+id/button_eight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_clear" />

        <Button
            android:id="@+id/button_eight"
            style="@style/NumberButton"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_margin="@dimen/button_margin_all"
            android:text="@string/eight"
            app:layout_constraintBottom_toTopOf="@+id/button_five"
            app:layout_constraintEnd_toStartOf="@+id/button_nine"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/button_seven"
            app:layout_constraintTop_toBottomOf="@+id/button_percent" />

        <Button
            android:id="@+id/button_nine"
            style="@style/NumberButton"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_margin="@dimen/button_margin_all"
            android:text="@string/nine"
            app:layout_constraintBottom_toTopOf="@+id/button_six"
            app:layout_constraintEnd_toStartOf="@+id/button_sub"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintStart_toEndOf="@+id/button_eight"
            app:layout_constraintTop_toBottomOf="@+id/button_delete" />

        <Button
            android:id="@+id/button_four"
            style="@style/NumberButton"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_margin="@dimen/button_margin_all"
            android:text="@string/four"
            app:layout_constraintBottom_toTopOf="@+id/button_one"
            app:layout_constraintEnd_toStartOf="@+id/button_five"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_seven" />

        <Button
            android:id="@+id/button_five"
            style="@style/NumberButton"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_margin="@dimen/button_margin_all"
            android:text="@string/five"
            app:layout_constraintBottom_toTopOf="@+id/button_two"
            app:layout_constraintEnd_toStartOf="@+id/button_six"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintStart_toEndOf="@+id/button_four"
            app:layout_constraintTop_toBottomOf="@+id/button_eight" />

        <Button
            android:id="@+id/button_six"
            style="@style/NumberButton"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_margin="@dimen/button_margin_all"
            android:text="@string/six"
            app:layout_constraintBottom_toTopOf="@+id/button_three"
            app:layout_constraintEnd_toStartOf="@+id/button_mul"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintStart_toEndOf="@+id/button_five"
            app:layout_constraintTop_toBottomOf="@+id/button_nine" />

        <Button
            android:id="@+id/button_one"
            style="@style/NumberButton"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_margin="@dimen/button_margin_all"
            android:text="@string/one"
            app:layout_constraintBottom_toTopOf="@+id/button_dot"
            app:layout_constraintEnd_toStartOf="@+id/button_two"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_four" />

        <Button
            android:id="@+id/button_two"
            style="@style/NumberButton"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_margin="@dimen/button_margin_all"
            android:text="@string/two"
            app:layout_constraintBottom_toTopOf="@+id/button_zero"
            app:layout_constraintEnd_toStartOf="@+id/button_three"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/button_one"
            app:layout_constraintTop_toBottomOf="@+id/button_five" />

        <Button
            android:id="@+id/button_three"
            style="@style/NumberButton"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_margin="@dimen/button_margin_all"
            android:text="@string/three"
            app:layout_constraintBottom_toTopOf="@+id/button_result"
            app:layout_constraintEnd_toStartOf="@+id/button_div"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/button_two"
            app:layout_constraintTop_toBottomOf="@+id/button_six" />

        <Button
            android:id="@+id/button_dot"
            style="@style/NumberButton"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_margin="@dimen/button_margin_all"
            android:text="@string/dot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_zero"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_one" />

        <Button
            android:id="@+id/button_zero"
            style="@style/NumberButton"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_margin="@dimen/button_margin_all"
            android:text="@string/zero"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_result"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintStart_toEndOf="@+id/button_dot"
            app:layout_constraintTop_toBottomOf="@+id/button_two" />

        <Button
            android:id="@+id/button_result"
            style="@style/ResultButton"
            android:layout_width="@dimen/button_layout_width"
            android:layout_height="@dimen/button_layout_height"
            android:layout_margin="@dimen/button_margin_all"
            android:text="@string/result"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_weight="1"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/button_zero"
            app:layout_constraintTop_toBottomOf="@+id/button_three" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>
